--- a/mkt/templates/mkt/base.html
+++ b/mkt/templates/mkt/base.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     {% block extrameta %}{% endblock %}
-    <title>{% block title %}{{ _('Mozilla Marketplace') }}{% endblock %}</title>
+    <title>{% block title %}{{ _('Firefox Marketplace') }}{% endblock %}</title>
 
     <link rel="shortcut icon" type="image/x-icon"
           href="{{ MEDIA_URL }}img/mkt/logos/128.png" sizes="128x128">
