--- a/mkt/templates/mkt/header.html
+++ b/mkt/templates/mkt/header.html
@@ -1,6 +1,6 @@
 <header id="site-header" class="c">
   <section>
-    <h1 class="logo"><a href="{{ url('home') }}">{{ _('Mozilla Marketplace') }}</a></h1>
+    <h1><a href="{{ url('home') }}">{{ _('Firefox Marketplace') }}</a></h1>
     {% if request.can_view_consumer %}
     <nav role="navigation">
       <a href="{{ url('home') }}" class="header-button icon home left">{{ _('Home') }}</a>
