--- a/mkt/home/templates/home/home.html
+++ b/mkt/home/templates/home/home.html
@@ -3,7 +3,7 @@
 {% block bodyclass %}home{% endblock %}
 
 {% block content %}
-  <h1 id="top">{{ _('Mozilla Marketplace') }}</h1>
+  <h1 id="top">{{ _('Firefox Marketplace') }}</h1>
   <section class="featured">
     <ul class="grid">
       {% for app in featured %}
