--- a/media/css/mkt/suggestions.less
+++ b/media/css/mkt/suggestions.less
@@ -1,13 +1,11 @@
 @import 'lib';
 
 #search {
-    float: right;
     position: relative;
-    margin: 10px 14px;
-}
-
-.show-search #search-q {
-    display: block;
+    margin: 0;
+    max-width: 200px;
+    top: 10px;
+    left: 10px;
 }
 
 #search-q {
@@ -16,36 +14,23 @@
     .box-shadow(0 1px 0 fadeOut(#fff, 80%),
                 0 1px 0 rgba(0,0,0,.5) inset,
                 0 1px 1px rgba(0,0,0,.5) inset);
-    .gradient-two-color(#21292f, #2a353c);
-    .width(3);
+    .gradient-two-color-with-image(#21292f, #2a353c, url(../../img/mkt/icons/magnifier.png), ~'8px 8px', no-repeat);
     -webkit-appearance: none;
     -moz-appearance: none;
     border: 0;
-    color: #99abb9;
+    color: lighten(#99abb9, 2%);
     display: block;
+    font: 17px/30px @open-stack;
     height: 30px;
     outline: none;
-    padding: 0 32px 0 8px;
+    padding: 0 5px 0 30px;
     z-index: 2;
-    font: 17px/30px @open-stack;
+    width: 185px;
     &:focus {
         .box-shadow(0 1px 1px rgba(0, 0, 0, 0.06) inset,
                     0 0 8px rgba(80, 160, 220, 0.6));
+        color: @white;
     }
-}
-#search-go {
-    .box-shadow(none);
-    background: url(../../img/mkt/icons/magnifier.png) center no-repeat;
-    border: 0;
-    display: block;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 0;
-    right: 7px;
-    text-indent: -9999px;
-    width: 20px;
 }
 
 .html-rtl #site-header #search-q {
