add new stars to app tiles

--- a/media/css/mkt/tile.less
+++ b/media/css/mkt/tile.less
@@ -112,8 +112,10 @@
         .author {
             display: none;
         }
+        .price,
         .rating {
-            display: none;
+            display: inline-block;
+            vertical-align: middle;
         }
         &.category {
             height: 107px;
