--- a/media/css/mkt/header.less
+++ b/media/css/mkt/header.less
@@ -8,23 +8,41 @@
 
 // if there is a page title we want in the header, give it the id of #top
 #top {
-    position: fixed;
-    text-align: center;
+    .dark-text-shadow;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 50px;
+    margin: 0 35px;
     max-width: 200px;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    margin: 0 auto;
-    font-size: 18px;
-    line-height: 50px;
-    z-index: 110;
-    color: #fff;
-    font-weight: 300;
+    z-index: 2;
+}
+
+@media (min-width: @4col) {
+    #top {
+        margin: 0 auto;
+        text-align: center;
+    }
 }
 
 .home #top {
-    background: url(../../img/mkt/logos/small.png) 0 10px no-repeat;
-    text-indent: 30px;
+    text-align: center;
+    max-width: 300px;
+    width: 240px;
+    &:before {
+        background: url(../../img/mkt/logos/small.png) no-repeat;
+        content: "";
+        height: 27px;
+        width: 35px;
+        display: inline-block;
+        margin-left: 10px;
+        position: relative;
+        top: 5px;
+    }
 }
 
 #search {
@@ -47,7 +65,7 @@
     top: 0;
     left: 0;
     overflow: hidden;
-    z-index: 100;
+    z-index: 1;
     h1 {
         display: none;
     }
@@ -65,6 +83,7 @@
     height: 50px;
     text-indent: -1000%;
     position: relative;
+    z-index: 3;
     &:after {
         content: '';
         z-index: 1;
@@ -115,10 +134,15 @@
             width: 12px;
             left: 4px;
         }
+        &:hover {
+            background-image: -moz-linear-gradient(top, fade(#000, 0%), fade(#000, 35%) 25%, fade(#000, 35%) 75%, fade(#000, 0%) 100%);
+        }
+        &:focus {
+            .depressed;
+        }
     }
     &.home {
         width: 29px;
-        background-image: -moz-linear-gradient(top, fade(#000, 0%), fade(#000, 25%) 25%, fade(#000, 25%) 75%, fade(#000, 0%) 100%);
         &:before {
             width: 18px;
             left: 5px;
