add iPhone-style click on header -> scroll to top

--- a/media/css/mkt/tile.less
+++ b/media/css/mkt/tile.less
@@ -32,8 +32,8 @@
 // name + icon + price + rating in a vertical listview.
 // also used as standalone "card" on detail pages.
 .listing .mkt-tile {
-    min-height: 66px;
     .gradient-two-color(#f7f7f7, @barely-gray);
+    min-height: 66px;
     padding: 20px 15px;
     h3 {
         font-size: 20px;
@@ -86,7 +86,7 @@
     .mkt-tile {
         position: relative;
         width: 100%;
-        height: 106px;
+        max-height: 106px;
         .info {
             .box-shadow(0 0 2px rgba(0,0,0,.1));
             background: rgba(255,255,255,.7);
