--- a/media/css/mkt/typography.less
+++ b/media/css/mkt/typography.less
@@ -106,3 +106,16 @@ dd {
     margin: 0 0 10px;
 }
 
+/*
+.linefit {
+    overflow: hidden;
+    position: relative;
+    span {
+        .transform-origin(0, 50%);
+        display: block;
+        position: absolute;
+        left: 0;
+        white-space: nowrap;
+    }
+}
+*/
