--- a/mkt/browse/templates/browse/helpers/category_slider.html
+++ b/mkt/browse/templates/browse/helpers/category_slider.html
@@ -4,7 +4,7 @@
       <li>
         <a class="mkt-tile category" href="{{ category.get_url_path() }}">
           <div class="icon cat-{{ category.slug }}"></div>
-          <h3>{{ category.name }}</h3>
+          <h3 class="linefit">{{ category.name }}</h3>
         </a>
       </li>
     {% endfor %}
