--- a/media/css/mkt/slider.less
+++ b/media/css/mkt/slider.less
@@ -147,8 +147,7 @@
 
 .categories {
     .icon {
-        .box-shadow(~'0 1px 2px 0 rgba(0,0,0,.3), 0 2px 1px 0 rgba(0,0,0,0.1), 0 0 0 1px rgba(0,0,0,.05), 0 0 12px 0 rgba(0,0,0,.05), 0 0 12px 0 rgba(0,0,0,.05) inset');
-        background: #D9DDE0 url(../../img/mkt/glyphs/rocket.png) 50% 50% no-repeat;
+        background: #D9DDE0 url(../../img/mkt/glyphs/rocket.png) 50% -3px no-repeat;
         &:after {
             top: auto;
             right: 5px;
@@ -262,4 +261,3 @@
         height: 118px;
     }
 }
-
