--- a/media/css/mkt/infobox.less
+++ b/media/css/mkt/infobox.less
@@ -1,8 +1,19 @@
 @import 'lib';
 
 .infobox {
-    border-bottom: 1px solid #abb4ba;
-    border-top: 1px solid #edf0f1;
+    /*
+    padding-top: 1px;
+    &:before {
+        background: rgba(3,16,26,.13);
+        content: "";
+        height: 1px;
+        position: relative;
+        top: -2px;
+        display: block;
+    }
+    */
+    border-top: 1px solid rgba(255,255,255,.5);
+    border-bottom: 1px solid rgba(3,16,26,.13);
     > div {
         padding: 20px 15px;
     }
