--- a/media/css/mkt/lib.less
+++ b/media/css/mkt/lib.less
@@ -224,6 +224,17 @@
     background-image:         linear-gradient(@color1, @color2);
 }
 
+
+.gradient-two-color-with-image(@color1, @color2, @image) {
+    background: @color2;
+    background: @image, -webkit-gradient(linear, left bottom, left top, from(@color1), to(@color2));
+    background: @image, -webkit-linear-gradient(@color1, @color2);
+    background: @image, -moz-linear-gradient(@color1, @color2);
+    background: @image, -ms-linear-gradient(@color1, @color2);
+    background: @image, -o-linear-gradient(@color1, @color2);
+    background: @image, linear-gradient(@color1, @color2);
+}
+
 .gradient-two-color-with-image(@color1, @color2, @image, @position, @repeat) {
     background: @color2;
     background: @image @position @repeat, -webkit-gradient(linear, left bottom, left top, from(@color1), to(@color2));
