global name change

--- a/apps/users/templates/users/newpw_sent.html
+++ b/apps/users/templates/users/newpw_sent.html
@@ -7,10 +7,10 @@
   <div class="primary island">
     <h1>{{ _('Password Reset') }}</h1>
     <div class="notification-box success">
-      {{ _("It looks like you already have an account with the
-            Mozilla Marketplace. We've sent you a password-reset
-            email so you can complete your registration with the
-            Add-ons site. Thanks!") }}
+      {{ loc("It looks like you already have an account with the
+              Firefox Marketplace. We've sent you a password-reset
+              email so you can complete your registration with the
+              Add-ons site. Thanks!") }}
     </div>
   </div>
 </div>
