--- a/mkt/account/templates/account/about.html
+++ b/mkt/account/templates/account/about.html
@@ -11,13 +11,11 @@
         <h3 class="intro">{{ _('Privacy Policy') }}</h3>
 
         {# TODO: The text below seems to be filler content for now. #}
-        {% trans %}
             <p>Note: The proposed full version of the Privacy Policy for the
-            Mozilla Marketplace is currently under review and comment on our
+            Firefox Marketplace is currently under review and comment on our
             governance mailing list.</p>
 
-            <p>When the Mozilla Marketplace is fully launched, we will ask for
+            <p>When the Firefox Marketplace is fully launched, we will ask for
             your consent to the final Privacy Policy.</p>
-        {% endtrans %}
     </section>
 {% endblock %}
