--- a/mkt/developers/templates/developers/apps/dashboard.html
+++ b/mkt/developers/templates/developers/apps/dashboard.html
@@ -13,7 +13,7 @@
     {% if not addons %}
       <h2>{{ _('Welcome to the Developer Dashboard') }}</h2>
       <p>
-        You haven't yet submitted an app to the Mozilla Marketplace.
+        You haven't yet submitted an app to the Firefox Marketplace.
         Once you've <a href="https://developer.mozilla.org/apps">
         created your app</a>, click Submit Your App below.
       </p>
