--- a/mkt/developers/templates/developers/payments/in-app-config.html
+++ b/mkt/developers/templates/developers/payments/in-app-config.html
@@ -18,7 +18,7 @@
   <div id="in-app-config" class="devhub-form island">
     <form class="item in-app-config" method="post" action="{{ request.path }}">
       <p>
-        {{ _('The Mozilla Marketplace allows your app to take in-app payments.
+        {{ _('The Firefox Marketplace allows your app to take in-app payments.
               The <a href="{guide}">in-app payment guide</a> explains how to
               configure your app for payments with the parameters below.
               ')|f(guide='https://developer.mozilla.org/en/Apps/In-app_payments')|safe }}
