--- a/mkt/developers/templates/developers/skeleton_impala.html
+++ b/mkt/developers/templates/developers/skeleton_impala.html
@@ -7,7 +7,7 @@
       <meta name="robots" content="noindex">
     {% endif %}
     {% block extrameta %}{% endblock %}
-    <title>{% block title %}{{ _('Mozilla Marketplace') }}{% endblock %}</title>
+    <title>{% block title %}{{ _('Firefox Marketplace') }}{% endblock %}</title>
 
     <link rel="shortcut icon" type="image/x-icon"
           href="{{ MEDIA_URL }}img/mkt/logos/128.png" sizes="128x128">
@@ -66,7 +66,7 @@
           </nav>
           {% block masthead %}
           <h1 class="logo"><a href="{{ url('ecosystem.landing') }}">
-            {{ _('Mozilla Marketplace Developers') }}</a></h1>
+            {{ _('Firefox Marketplace Developers') }}</a></h1>
           {% endblock %}
         </div>
         {% block site_header_title %}
