--- a/mkt/ecosystem/templates/ecosystem/header.html
+++ b/mkt/ecosystem/templates/ecosystem/header.html
@@ -2,7 +2,7 @@
   <section>
     <div class="wrapper">
       <h1 class="logo"><a href="{{ url('ecosystem.landing') }}">
-        {{ _('Mozilla Marketplace Developers') }}</a></h1>
+        {{ _('Firefox Marketplace Developers') }}</a></h1>
       <nav role="navigation">
         {#
           <a href="{{ url('ecosystem.tutorial') }}">Tutorials</a>
