--- a/mkt/site/templates/site/no_consumer.html
+++ b/mkt/site/templates/site/no_consumer.html
@@ -4,7 +4,7 @@
 <section id="walled">
   <div>
     <h1>Coming Soon</h1>
-    <p>Sorry, these pages for the Mozilla Marketplace aren't ready yet.</p>
+    <p>Sorry, these pages for the Firefox Marketplace aren't ready yet.</p>
     <h1>Have an app to submit?</h1>
     <p id="access-devhub">
       The Marketplace Developers site is still open.
