--- a/mkt/submit/templates/submit/terms.html
+++ b/mkt/submit/templates/submit/terms.html
@@ -12,7 +12,7 @@
     <h2>Marketplace Developer Program</h2>
     <p>
       We're excited you've built an app using web technologies, and
-      submitting it to the Mozilla Marketplace is the best way for users
+      submitting it to the Firefox Marketplace is the best way for users
       to discover and enjoy it across their devices. First, you'll need to
       join the Marketplace Developer Program below.
     </p>
