--- a/mkt/support/templates/support/mozilla.html
+++ b/mkt/support/templates/support/mozilla.html
@@ -9,7 +9,7 @@
       respond to misdirected support requests through this form.
     {% endtrans %}
   </p>
-  <p class="recipient">{{ _('To: Mozilla Marketplace Support') }}</p>
+  <p class="recipient">{{ _('To: Firefox Marketplace Support') }}</p>
   {{ form_field(form.text, _('Please describe the issue:'), tag='p') }}
   <p class="form-footer">
     <button type="submit">{{ _('Send Request') }}</button> {{ _('or') }}
